# lammplighter

./: .env  .env.local  .gitignore  .pre-commit-config.yaml  .test.env  Dockerfile  Dockerfile.lammp  Dockerfile.ui  README.md  ecs_service.json  ecs_task.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  deploy_base.yml  deploy_ui.yml  publish.yml  pytest.yml  pytest_and_deploy.yml  test.yml
api/: main.py  squeue.py
api/database/: crud.py  database.py  models.py  schemas.py
api/test/: test_main.py
api/test/lammps_mock/: __init__.py
ui/: .env  package-lock.json  package.json
ui/src/: App.tsx  FileUpload.tsx  NewRunForm.tsx  Table.tsx
