[tool.pytest.ini_options]
env_files = ".test.env"

[tool.poetry]
name = "lammplighter"
version = "0.1.0"
description = "API on top of lammp"
authors = ["Tamjid Rahman <tamjidarrahman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
boto3 = "^1.28.63"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
httpx = "^0.25.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
